# skolemfc

./: .gitmodules  CMakeLists.txt  INSTALL.md  README.md  install.sh  skolemfcConfig.cmake.in
examples/: find_inv_bvsle_bvnot_4bit.qdimacs  parity-AIG-d0.qdimacs
src/: CMakeLists.txt  GitSHA1.cpp.in  GitSHA1.h  config.h  counter.cpp  counter.h  dimacsparser.h  main.cpp  skolemfc-int.cpp  skolemfc-int.h  skolemfc.cpp  skolemfc.h  test.cpp  time_mem.h
utils/: clang-format.sh  install_static.sh
utils/baseline/: README.md  f2_formula_creator.py  skolemcount.sh
